set max score and fix grid overflow

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ header {
 
 header h1 {
   text-align: center;
-  font-size: 1.25rem;
+  font-size: min(1.25rem, 3.5vh);
   line-height: 0.75;
   padding: 0.5rem;
   margin: 0;
@@ -18,31 +18,33 @@ header h1 {
   background-color: darkblue;
 }
 
-.score-container h1{
+.score-container h1 {
   margin-inline: auto;
 }
 
 .grid-container {
   position: relative;
+  height: 95%;
   width: 100%;
-  aspect-ratio: 1;
   margin-inline: auto;
   display: grid;
   grid-template: 1fr 1fr / 1fr 1fr;
   gap: 1%;
   padding: 1.5%;
   overflow: hidden;
+  border: 5px solid black;
 }
 
 .grid-tile {
   border-radius: 5%;
+  border: 5px solid black;
   padding: 2%;
   cursor: pointer;
-  aspect-ratio: 1;
+  min-height: 0;
 }
 
 .grid-tile:hover {
-  scale: 1.1;
+  scale: 1.05;
   transition: scale 100ms ease-in-out;
 }
 
@@ -53,7 +55,7 @@ header h1 {
 .grid-tile img {
   height: 100%;
   width: 100%;
-  object-fit: cover;
+  object-fit: contain;
   display: block;
   border-radius: 5%;
 }
